# share-1password

./: .env.example  Cargo.toml  README.md  release.sh
src/: main.rs
