[package]
name = "share-1password"
description = "Securely share notes with others using 1Password. Perfect for developers sending passwords to clients."
version = "1.1.3"
keywords = ["1password", "cli", "sharing", "security", "passwords"]
repository = "https://github.com/magnusrodseth/share-1password/tree/main"
edition = "2021"
license = "MIT"

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.17", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12.0"
chrono = "0.4.38"

[profile.release]
lto = true
